Fix misaligned Study button
Fixes #287.

--- a/frontend/less/header.less
+++ b/frontend/less/header.less
@@ -61,14 +61,16 @@ h1::after {
 }
 
 .main-menu .reviewable-count-label {
-	background-color: var(--warning-color);
+	background-color: var(--muted-color);
 	color: var(--background-color);
 	border-radius: 15px;
-	padding: 2px 4px;
+	padding: 7px 3px;
+	height: 5px;
 	margin-left: 8px;
+	margin-right: -1px;
+	line-height: 0;
 	font-size: 85%;
 	font-weight: 500;
-	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 	min-width: 20px;
 	display: inline-block;
 }
